fixed the responsive behaviour , updated the career page

--- a/career.html
+++ b/career.html
@@ -88,53 +88,31 @@
     </style>
   </head>
   <body class="bg-gray-50">
-    <!-- Top Info Bar -->
-    <div class="bg-gradient-to-r from-green-500 to-teal-600 text-white text-sm">
-      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <div
-          class="flex flex-col sm:flex-row items-center justify-between py-1 sm:py-2"
-        >
-          <!-- Contact Info -->
-          <div
-            class="flex flex-col sm:flex-row items-center space-y-1 sm:space-y-0 sm:space-x-6 text-center sm:text-left"
-          >
-            <a
-              href="mailto:enquiry@tpes.in"
-              class="flex items-center space-x-2 hover:text-gray-200 transition"
-            >
-              <i class="fas fa-envelope"></i>
-              <span>enquiry@tpes.in</span>
-            </a>
-            <a
-              href="tel:+91 9921174727"
-              class="flex items-center space-x-2 hover:text-gray-200 transition"
-            >
-              <i class="fas fa-phone"></i>
-              <span>+91 9921174727 / 7507082185</span>
-            </a>
-          </div>
-
-          <!-- Social Icons -->
-          <div class="flex space-x-4 mt-2 sm:mt-0">
-            <a href="#" class="hover:text-gray-200 transition"
-              ><i class="fab fa-facebook-f"></i
-            ></a>
-            <a href="#" class="hover:text-gray-200 transition"
-              ><i class="fab fa-twitter"></i
-            ></a>
-            <a href="#" class="hover:text-gray-200 transition"
-              ><i class="fab fa-linkedin-in"></i
-            ></a>
-            <a href="#" class="hover:text-gray-200 transition"
-              ><i class="fab fa-instagram"></i
-            ></a>
-          </div>
+   
+   <!-- Top Info Bar -->
+    <div class="bg-gradient-to-r from-green-500 to-teal-600 text-white text-sm fade-in container-fix">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex flex-col sm:flex-row items-center justify-between py-1 sm:py-2">
+                <div class="flex items-center space-x-6">
+                    <a href="mailto:enquiry@tpes.in" class="hover:text-gray-200 transition">
+                        <i class="fas fa-envelope text-md"></i>
+                    </a>
+                    <a href="tel:+919921174727" class="hover:text-gray-200 transition">
+                        <i class="fas fa-phone text-md"></i>
+                    </a>
+                </div>
+                <div class="flex space-x-4 mt-2 sm:mt-0">
+                    <a href="#" class="hover:text-gray-200 transition"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="hover:text-gray-200 transition"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="hover:text-gray-200 transition"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#" class="hover:text-gray-200 transition"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
 
     <!-- Main Navigation -->
-     <nav
+       <nav
       class="backdrop-blur-md bg-white/70 shadow-md w-full border-b border-teal-200 relative z-50"
     >
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -710,35 +688,24 @@
     </section>
 
     <!-- Footer -->
-    <footer
+  <footer
       class="relative bg-gradient-to-br from-teal-800 to-green-900 text-white pt-16 pb-8"
     >
       <!-- Top Border Curve -->
       <div
-        class="absolute top-0 left-0 right-0 h-8 bg-gray-50 rounded-b-full"
+        class="absolute top-0 left-0 right-0 h-8 bg-white rounded-b-full"
       ></div>
 
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
         <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
           <!-- Company Info with Logo and Address -->
           <div class="md:col-span-1">
-            <div class="mb-6">
-              <img
-                src="Images/Logo.png"
-                alt="Terrapure Logo"
-                class="h-20 bg-white p-2 rounded-lg shadow-md"
-              />
-            </div>
-            <p class="text-teal-100 mb-4 text-sm leading-relaxed">
-              Leading environmental solutions provider specializing in water and
-              wastewater treatment systems for sustainable future.
-            </p>
-            <div class="text-teal-100 text-sm">
+            <div class="text-white text-lg">
               <p class="font-semibold mb-2">Office Address:</p>
               <a
                 href="https://maps.google.com/?q=Office+No.+301,+7+Bizz+Sonigara+Business+Complex,+Ravet+BRT+Road,+Pune+412101"
                 target="_blank"
-                class="hover:text-white transition-colors block"
+                class="hover:text-white text-md transition-colors block responsive-text"
               >
                 Office No. 301, 7 Bizz Sonigara Business Complex,<br />
                 Ravet BRT Road, Pune – 412101,<br />
@@ -758,7 +725,7 @@
               <li>
                 <a
                   href="index.html"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group responsive-text"
                 >
                   <i
                     class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"
@@ -769,7 +736,7 @@
               <li>
                 <a
                   href="about.html"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group responsive-text"
                 >
                   <i
                     class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"
@@ -779,28 +746,19 @@
               </li>
               <li>
                 <a
-                  href="services.html"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                  href="career.html"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group responsive-text"
                 >
                   <i
                     class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"
                   ></i>
-                  Services
+                  Career
                 </a>
               </li>
-               <li>
-                        <a
-                            href="career.html"
-                            class="text-teal-100 hover:text-white transition-colors flex items-center group"
-                        >
-                            <i class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"></i>
-                            Career
-                        </a>
-                    </li>
               <li>
                 <a
                   href="contact.html"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group responsive-text"
                 >
                   <i
                     class="fas fa-chevron-right text-xs mr-2 group-hover:translate-x-1 transition-transform"
@@ -822,7 +780,7 @@
               <li>
                 <a
                   href="services.html#ro"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group responsive-text"
                 >
                   <i class="fas fa-tint text-xs mr-2"></i>
                   RO Plants
@@ -831,7 +789,7 @@
               <li>
                 <a
                   href="services.html#stp"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group responsive-text"
                 >
                   <i class="fas fa-recycle text-xs mr-2"></i>
                   Sewage Treatment
@@ -840,7 +798,7 @@
               <li>
                 <a
                   href="services.html#etp"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group responsive-text"
                 >
                   <i class="fas fa-industry text-xs mr-2"></i>
                   Effluent Treatment
@@ -849,7 +807,7 @@
               <li>
                 <a
                   href="services.html#zld"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group responsive-text"
                 >
                   <i class="fas fa-infinity text-xs mr-2"></i>
                   ZLD Systems
@@ -858,7 +816,7 @@
               <li>
                 <a
                   href="services.html#softeners"
-                  class="text-teal-100 hover:text-white transition-colors flex items-center group"
+                  class="text-teal-100 hover:text-white transition-colors flex items-center group responsive-text"
                 >
                   <i class="fas fa-filter text-xs mr-2"></i>
                   Water Softeners
@@ -878,20 +836,15 @@
               <!-- Phone Numbers -->
               <div class="flex items-start">
                 <div
-                  class="w-8 h-8 bg-teal-700 rounded-full flex items-center justify-center mr-3 mt-1"
+                  class="w-8 h-8 bg-teal-700 rounded-full flex items-center justify-center mr-3"
                 >
                   <i class="fas fa-phone text-white text-xs"></i>
                 </div>
                 <div>
                   <a
                     href="tel:+919921174727"
-                    class="text-teal-100 hover:text-white transition-colors block text-sm font-medium"
+                    class="text-teal-100 hover:text-white transition-colors block text-sm font-medium responsive-text"
                     >+91 9921174727</a
-                  >
-                  <a
-                    href="tel:+917507082185"
-                    class="text-teal-100 hover:text-white transition-colors block text-sm font-medium"
-                    >+91 7507082185</a
                   >
                 </div>
               </div>
@@ -906,12 +859,12 @@
                 <div>
                   <a
                     href="mailto:enquiry@tpes.in"
-                    class="text-teal-100 hover:text-white transition-colors block text-sm font-medium"
+                    class="text-teal-100 hover:text-white transition-colors block text-sm font-medium responsive-text"
                     >enquiry@tpes.in</a
                   >
                   <a
                     href="mailto:info@tpes.in"
-                    class="text-teal-100 hover:text-white transition-colors block text-sm font-medium"
+                    class="text-teal-100 hover:text-white transition-colors block text-sm font-medium responsive-text"
                     >info@tpes.in</a
                   >
                 </div>
@@ -960,26 +913,24 @@
           <div
             class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0"
           >
-            <div class="text-teal-200 text-sm text-center md:text-left">
+            <div class="text-teal-200 text-sm text-center md:text-left responsive-text">
               <p>
                 &copy; 2025 Terrapure Environment Services Pvt. Ltd. All rights
                 reserved.
               </p>
             </div>
             <div class="flex space-x-6 text-sm text-teal-200">
-              <a href="#" class="hover:text-white transition-colors"
+              <a href="#" class="hover:text-white transition-colors responsive-text"
                 >Privacy Policy</a
               >
-              <a href="#" class="hover:text-white transition-colors"
+              <a href="#" class="hover:text-white transition-colors responsive-text"
                 >Terms of Service</a
               >
-              <a href="#" class="hover:text-white transition-colors">Sitemap</a>
             </div>
           </div>
         </div>
       </div>
     </footer>
-
     <script>
       // script.js - Bulletproof smooth scroll + mobile menu
       document.addEventListener("DOMContentLoaded", function () {
