--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
                 </p>
                 <div class="flex flex-col sm:flex-row gap-3">
                   <a
-                    href="about.html"
+                    href="ZLD.html"
                     class="inline-flex items-center justify-center bg-white text-yellow-900 px-6 py-3 rounded-lg font-medium hover:bg-purple-50 hover:scale-105 transition-all duration-300 shadow responsive-text"
                   >
                     <i class="fas fa-leaf mr-2 text-sm"></i>
@@ -795,83 +795,77 @@
           </div>
 
           <!-- Director 2 -->
-          <div
-            class="group relative bg-white rounded-2xl shadow-xl overflow-hidden border border-teal-100 hover:shadow-2xl transition-all duration-300"
-            data-aos="fade-up"
-            data-aos-delay="400"
-          >
-            <div
-              class="absolute -top-3 -left-3 w-20 h-20 bg-gradient-to-br from-teal-500 to-green-500 rounded-full opacity-10 group-hover:opacity-20 transition-opacity duration-500"
-            ></div>
-            <div class="relative overflow-hidden">
-              <img
-                src="https://images.unsplash.com/photo-1582750433449-648ed127bb54?auto=format&fit=crop&w=600&q=80"
-                alt="Director Name"
-                class="w-full h-64 object-cover rounded-t-2xl group-hover:scale-105 transition-transform duration-500"
-              />
-              <div
-                class="absolute inset-0 bg-gradient-to-t from-black/30 to-transparent rounded-t-2xl"
-              ></div>
-              <div class="absolute bottom-3 left-4">
-                <div
-                  class="bg-gradient-to-r from-teal-500 to-green-500 text-white px-3 py-1 rounded-full text-xs font-semibold shadow"
-                >
-                  Professional Experience
-                </div>
-              </div>
-            </div>
-            <div class="p-6 relative">
-              <div class="flex items-start justify-between mb-3">
-                <div>
-                  <h3 class="text-xl font-bold text-gray-800 mb-1">
-                    Director Name
-                  </h3>
-                  <p class="text-teal-600 font-semibold text-sm">
-                    Position Title
-                  </p>
-                </div>
-                <div
-                  class="w-10 h-10 bg-gradient-to-r from-teal-100 to-green-100 rounded-full flex items-center justify-center"
-                >
-                  <svg
-                    class="w-5 h-5 text-teal-600"
-                    fill="none"
-                    stroke="currentColor"
-                    viewBox="0 0 24 24"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
-                    ></path>
-                  </svg>
-                </div>
-              </div>
-              <div class="flex flex-wrap gap-2 mb-4">
-                <span
-                  class="bg-blue-50 text-blue-700 px-3 py-1 rounded-full text-xs border border-blue-200"
-                  >Expertise Area</span
-                >
-                <span
-                  class="bg-teal-50 text-teal-700 px-3 py-1 rounded-full text-xs border border-teal-200"
-                  >Specialization</span
-                >
-                <span
-                  class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-xs border border-green-200"
-                  >Leadership</span
-                >
-              </div>
-              <p
-                class="text-gray-600 leading-relaxed mb-2 border-l-4 border-teal-400 pl-3 text-sm responsive-text"
-              >
-                [Director 2 bio content will go here.]
-              </p>
-              <p class="text-gray-600 leading-relaxed text-sm responsive-text">
-                [Additional details about the second director.]
-              </p>
-            </div>
-          </div>
+    <div
+  class="group relative bg-white rounded-2xl shadow-xl overflow-hidden border border-teal-100 hover:shadow-2xl transition-all duration-300"
+  data-aos="fade-up"
+  data-aos-delay="400"
+>
+  <!-- Decorative Highlight -->
+  <div
+    class="absolute -top-3 -left-3 w-20 h-20 bg-gradient-to-br from-teal-500 to-green-500 rounded-full opacity-10 group-hover:opacity-20 transition-opacity duration-500"
+  ></div>
+
+  <!-- Image Section -->
+  <div class="relative overflow-hidden">
+    <img
+      src="Images/director2.jpg"
+      alt="Managing Director"
+      class="w-full h-64 object-cover rounded-t-2xl group-hover:scale-105 transition-transform duration-500"
+    />
+    <div class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent rounded-t-2xl"></div>
+
+    <div class="absolute bottom-3 left-4">
+      <div
+        class="bg-gradient-to-r from-teal-500 to-green-500 text-white px-3 py-1 rounded-full text-xs font-semibold shadow"
+      >
+        15+ Years Experience
+      </div>
+    </div>
+  </div>
+
+  <!-- Content -->
+  <div class="p-6 relative">
+    <div class="flex items-start justify-between mb-3">
+      <div>
+        <h3 class="text-xl font-bold text-gray-800 mb-1">Mr. Pruthviraj Gaud</h3>
+        <p class="text-teal-600 font-semibold text-sm">Managing Director</p>
+      </div>
+      <div
+        class="w-10 h-10 bg-gradient-to-r from-teal-100 to-green-100 rounded-full flex items-center justify-center"
+      >
+        <svg
+          class="w-5 h-5 text-teal-600"
+          fill="none"
+          stroke="currentColor"
+          viewBox="0 0 24 24"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
+          ></path>
+        </svg>
+      </div>
+    </div>
+
+    <!-- Tags -->
+    <div class="flex flex-wrap gap-2 mb-4">
+      <span class="bg-blue-50 text-blue-700 px-3 py-1 rounded-full text-xs border border-blue-200">Leadership</span>
+      <span class="bg-teal-50 text-teal-700 px-3 py-1 rounded-full text-xs border border-teal-200">Industrial Expertise</span>
+      <span class="bg-green-50 text-green-700 px-3 py-1 rounded-full text-xs border border-green-200">Sustainable Solutions</span>
+    </div>
+
+    <!-- Bio -->
+    <p class="text-gray-600 leading-relaxed mb-2 border-l-4 border-teal-400 pl-3 text-sm responsive-text">
+      A visionary leader driving innovation and operational excellence across water and wastewater treatment projects.
+    </p>
+    <p class="text-gray-600 leading-relaxed text-sm responsive-text">
+      Specializing in strategic project execution, client relationship management, and ensuring sustainable business growth for Terrapure.
+    </p>
+  </div>
+</div>
+
         </div>
 
         <!-- Company Values Section -->
@@ -1052,7 +1046,7 @@
                     Reverse Osmosis Plant
                   </h3>
                   <a
-                    href="services.html#ro"
+                    href="RO.html"
                     class="inline-flex items-center text-teal-700 font-medium hover:text-blue-600 transition-colors mt-1 responsive-text"
                     >Learn More<i class="fas fa-arrow-right ml-2 text-xs"></i
                   ></a>
@@ -1077,7 +1071,7 @@
                     Water Treatment Plant (WTP)
                   </h3>
                   <a
-                    href="services.html#wtp"
+                    href="WTP.html"
                     class="inline-flex items-center text-teal-700 font-medium hover:text-cyan-600 transition-colors mt-1 responsive-text"
                     >Learn More<i class="fas fa-arrow-right ml-2 text-xs"></i
                   ></a>
@@ -1102,7 +1096,7 @@
                     Demineralization Plants (DM)
                   </h3>
                   <a
-                    href="services.html#dm"
+                    href="demineralization-plants(DM).html"
                     class="inline-flex items-center text-teal-700 font-medium hover:text-sky-600 transition-colors mt-1 responsive-text"
                     >Learn More<i class="fas fa-arrow-right ml-2 text-xs"></i
                   ></a>
@@ -1127,7 +1121,7 @@
                     Water Softening Plants
                   </h3>
                   <a
-                    href="services.html#softeners"
+                    href="water-softener-plant.html"
                     class="inline-flex items-center text-teal-700 font-medium hover:text-blue-500 transition-colors mt-1 responsive-text"
                     >Learn More<i class="fas fa-arrow-right ml-2 text-xs"></i
                   ></a>
@@ -1158,7 +1152,7 @@
                     Sewage Treatment Plant (STP)
                   </h3>
                   <a
-                    href="services.html#stp"
+                    href="sewage.html"
                     class="inline-flex items-center text-teal-700 font-medium hover:text-green-600 transition-colors mt-1 responsive-text"
                     >Learn More<i class="fas fa-arrow-right ml-2 text-xs"></i
                   ></a>
@@ -1183,7 +1177,7 @@
                     Effluent Treatment Plant
                   </h3>
                   <a
-                    href="services.html#etp"
+                    href="ETP.html"
                     class="inline-flex items-center text-teal-700 font-medium hover:text-purple-600 transition-colors mt-1 responsive-text"
                     >Learn More<i class="fas fa-arrow-right ml-2 text-xs"></i
                   ></a>
@@ -1213,7 +1207,7 @@
                     Zero Liquid Discharge Plants (ZLD)
                   </h3>
                   <a
-                    href="services.html#zld"
+                    href="ZLD.html"
                     class="inline-flex items-center text-teal-700 font-medium hover:text-teal-600 transition-colors mt-1 responsive-text"
                     >Learn More<i class="fas fa-arrow-right ml-2 text-xs"></i
                   ></a>
@@ -1237,7 +1231,7 @@
                     Wastewater Treatment Plant (WWTP)
                   </h3>
                   <a
-                    href="services.html#wwtp"
+                    href="wastewater-treatment.html"
                     class="inline-flex items-center text-teal-700 font-medium hover:text-indigo-600 transition-colors mt-1 responsive-text"
                     >Learn More<i class="fas fa-arrow-right ml-2 text-xs"></i
                   ></a>
@@ -1267,7 +1261,7 @@
                     Annual Maintenance Contract (AMC)
                   </h3>
                   <a
-                    href="services.html#amc"
+                    href="AMC.html"
                     class="inline-flex items-center text-teal-700 font-medium hover:text-emerald-600 transition-colors mt-1 responsive-text"
                     >Learn More<i class="fas fa-arrow-right ml-2 text-xs"></i
                   ></a>
@@ -1291,7 +1285,7 @@
                     Operation & Maintenance
                   </h3>
                   <a
-                    href="services.html#operation"
+                    href="operation & maintenance.html"
                     class="inline-flex items-center text-teal-700 font-medium hover:text-lime-600 transition-colors mt-1 responsive-text"
                     >Learn More<i class="fas fa-arrow-right ml-2 text-xs"></i
                   ></a>
@@ -1611,11 +1605,11 @@
                 A passionate group of professionals committed to driving
                 innovation and sustainability together.
               </p>
-              <a
+              <!-- <a
                 href="#"
                 class="inline-block bg-emerald-600 text-white text-sm font-medium px-4 py-2 rounded-md hover:bg-emerald-700 transition responsive-text"
                 >LEARN MORE →</a
-              >
+              > -->
             </div>
           </div>
 
@@ -1637,16 +1631,17 @@
                 strengthening partnerships and exploring new opportunities for
                 sustainable growth.
               </p>
-              <a
+              <!-- <a
                 href="#"
                 class="inline-block bg-emerald-600 text-white text-sm font-medium px-4 py-2 rounded-md hover:bg-emerald-700 transition responsive-text"
                 >LEARN MORE →</a
-              >
+              > -->
             </div>
           </div>
         </div>
       </div>
     </section>
+
 
     
     <!-- Process Timeline Flow Section -->
@@ -2135,13 +2130,52 @@
       });
     </script>
 
+<!-- Trusted Clients Marquee Section -->
+<section class="py-12 bg-white overflow-hidden">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <h2 class="text-3xl font-alansans font-bold text-teal-900 text-center mb-8 text-overflow-fix">
+      Our Trusted Clients
+    </h2>
+    <div class="relative w-full overflow-hidden">
+      <div class="flex animate-scroll whitespace-nowrap">
+        <img src="Images/client1.png" alt="Client 1" class="h-16 mx-6 object-contain">
+        <img src="Images/client2.png" alt="Client 2" class="h-16 mx-6 object-contain">
+        <img src="Images/client3.png" alt="Client 3" class="h-16 mx-6 object-contain">
+        <img src="Images/client4.png" alt="Client 4" class="h-16 mx-6 object-contain">
+        <img src="Images/client5.png" alt="Client 5" class="h-16 mx-6 object-contain">
+        <!-- Duplicate logos for seamless looping -->
+        <img src="Images/client1.png" alt="Client 1" class="h-16 mx-6 object-contain">
+        <img src="Images/client2.png" alt="Client 2" class="h-16 mx-6 object-contain">
+        <img src="Images/client3.png" alt="Client 3" class="h-16 mx-6 object-contain">
+        <img src="Images/client4.png" alt="Client 4" class="h-16 mx-6 object-contain">
+        <img src="Images/client5.png" alt="Client 5" class="h-16 mx-6 object-contain">
+      </div>
+    </div>
+  </div>
+  <style>
+    .animate-scroll {
+      display: inline-flex;
+      animation: scroll 20s linear infinite;
+    }
+    @keyframes scroll {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-50%); }
+    }
+    @media (max-width: 768px) {
+      .animate-scroll {
+        animation: scroll 15s linear infinite; /* Slower speed for mobile */
+      }
+    }
+  </style>
+</section>
+
     <!-- Footer -->
     <footer
       class="relative bg-gradient-to-br from-teal-800 to-green-900 text-white pt-16 pb-8"
     >
       <!-- Top Border Curve -->
       <div
-        class="absolute top-0 left-0 right-0 h-8 bg-blue-50 rounded-b-full"
+        class="absolute top-0 left-0 right-0 h-8 bg-white rounded-b-full"
       ></div>
 
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
