--- a/index.html
+++ b/index.html
@@ -2255,16 +2255,30 @@
     <div class="relative w-full overflow-hidden">
       <div class="flex animate-scroll whitespace-nowrap">
         <img src="Images/client1.png" alt="Client 1" class="h-16 mx-6 object-contain">
-        <img src="Images/client2.png" alt="Client 2" class="h-16 mx-6 object-contain">
+        <img src="Images/client2.jpeg" alt="Client 2" class="h-16 mx-6 object-contain">
         <img src="Images/client3.png" alt="Client 3" class="h-16 mx-6 object-contain">
         <img src="Images/client4.png" alt="Client 4" class="h-16 mx-6 object-contain">
         <img src="Images/client5.png" alt="Client 5" class="h-16 mx-6 object-contain">
+        <img src="Images/client6.jpeg" alt="Client 6" class="h-16 mx-6 object-contain">
+        <img src="Images/client7.jpg" alt="Client 7" class="h-16 mx-6 object-contain">
+        <img src="Images/client8.jpg" alt="Client 8" class="h-16 mx-6 object-contain">
+        <img src="Images/client9.png" alt="Client 9" class="h-16 mx-6 object-contain">
+        <img src="Images/client10.jpg" alt="Client 10" class="h-16 mx-6 object-contain">
+        <img src="Images/client11.png" alt="Client 11" class="h-16 mx-6 object-contain">
+        <img src="Images/client12.png" alt="Client 12" class="h-16 mx-6 object-contain">
         <!-- Duplicate logos for seamless looping -->
-        <img src="Images/client1.png" alt="Client 1" class="h-16 mx-6 object-contain">
-        <img src="Images/client2.png" alt="Client 2" class="h-16 mx-6 object-contain">
+         <img src="Images/client1.png" alt="Client 1" class="h-16 mx-6 object-contain">
+        <img src="Images/client2.jpeg" alt="Client 2" class="h-16 mx-6 object-contain">
         <img src="Images/client3.png" alt="Client 3" class="h-16 mx-6 object-contain">
         <img src="Images/client4.png" alt="Client 4" class="h-16 mx-6 object-contain">
         <img src="Images/client5.png" alt="Client 5" class="h-16 mx-6 object-contain">
+        <img src="Images/client6.jpeg" alt="Client 6" class="h-16 mx-6 object-contain">
+        <img src="Images/client7.jpg" alt="Client 7" class="h-16 mx-6 object-contain">
+        <img src="Images/client8.jpg" alt="Client 8" class="h-16 mx-6 object-contain">
+        <img src="Images/client9.png" alt="Client 9" class="h-16 mx-6 object-contain">
+        <img src="Images/client10.jpg" alt="Client 10" class="h-16 mx-6 object-contain">
+        <img src="Images/client11.png" alt="Client 11" class="h-16 mx-6 object-contain">
+        <img src="Images/client12.png" alt="Client 12" class="h-16 mx-6 object-contain">
       </div>
     </div>
   </div>
