added watermark on mobile devices for cta section

--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
             <!-- Watermark -->
             <img
               src="Images/logo.png"
-              class="absolute opacity-10 scale-75 left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 pointer-events-none"
+              class="absolute opacity-10 w-40 sm:w-48 md:w-56 lg:w-64 left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 pointer-events-none z-0"
               alt="Watermark"
             />
 
@@ -770,7 +770,7 @@
           >
             <img
               src="Images/logo.png"
-              class="absolute opacity-10 scale-75 left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 pointer-events-none"
+              class="absolute opacity-10 w-40 sm:w-48 md:w-56 lg:w-64 left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 pointer-events-none z-0"
               alt="Watermark"
             />
 
@@ -792,7 +792,7 @@
           >
             <img
               src="Images/logo.png"
-              class="absolute opacity-10 scale-75 left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 pointer-events-none"
+              class="absolute opacity-10 w-40 sm:w-48 md:w-56 lg:w-64 left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 pointer-events-none z-0"
               alt="Watermark"
             />
 
