--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
             <img
               src="Images/logo.png"
               class="absolute opacity-10 w-40 sm:w-48 md:w-56 lg:w-64 left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 pointer-events-none z-0"
-              alt="Watermark"
+              alt="Terrapure"
             />
 
             <div
@@ -771,7 +771,7 @@
             <img
               src="Images/logo.png"
               class="absolute opacity-10 w-40 sm:w-48 md:w-56 lg:w-64 left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 pointer-events-none z-0"
-              alt="Watermark"
+              alt="Terrapure"
             />
 
             <div
@@ -793,7 +793,7 @@
             <img
               src="Images/logo.png"
               class="absolute opacity-10 w-40 sm:w-48 md:w-56 lg:w-64 left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 pointer-events-none z-0"
-              alt="Watermark"
+              alt="Terrapure"
             />
 
             <div
