--- a/ZLD.html
+++ b/ZLD.html
@@ -570,15 +570,30 @@
     </section>
 
     <!-- Contact CTA Section -->
-    <section class="py-16 bg-gradient-to-r from-teal-500 to-green-400 text-white scale-in">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-            <h2 class="text-3xl font-bold mb-4">Need Complete Wastewater Recovery Solution?</h2>
-            <p class="text-xl mb-8 max-w-3xl mx-auto">Contact us for customized ZLD plant solutions to achieve zero liquid discharge and maximize water reuse</p>
-            <a href="contact.html" class="bg-white text-teal-600 font-semibold py-3 px-8 rounded-full shadow-lg transform hover:scale-105 transition-all duration-300 text-lg inline-block bounce-in">
-                <i class="fas fa-file-alt mr-2"></i>Request a Quote
-            </a>
-        </div>
-    </section>
+   <section class="relative py-16 bg-gradient-to-r from-teal-500 to-green-400 text-white scale-in overflow-hidden">
+    
+    <!-- ✅ Watermark Logo -->
+    <div class="absolute inset-0 flex items-center justify-center pointer-events-none opacity-15">
+        <img src="Images/Logo.png" alt="Terrapure Logo Watermark" class="w-[300px] md:w-[450px] lg:w-[550px] object-contain">
+    </div>
+
+    <!-- ✅ Content -->
+    <div class="relative z-10 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+        <h2 class="text-3xl font-bold mb-4">
+            Need Complete Wastewater Recovery Solution?
+        </h2>
+        <p class="text-xl mb-8 max-w-3xl mx-auto">
+            Contact us for customized ZLD plant solutions to achieve zero liquid discharge and maximize water reuse
+        </p>
+
+        <a href="contact.html"
+            class="bg-white text-teal-600 font-semibold py-3 px-8 rounded-full shadow-lg transform hover:scale-105 transition-all duration-300 text-lg inline-block bounce-in">
+            <i class="fas fa-file-alt mr-2"></i>Request a Quote
+        </a>
+    </div>
+
+</section>
+
 
     <!-- We Provide ZLD Plants Section -->
     <section class="py-16 bg-white">
