updated operation page

--- a/operation & maintenance.html
+++ b/operation & maintenance.html
@@ -601,73 +601,88 @@
 </section>
 
     <!-- Service Process Section - Diagrammatic Form -->
-    <section class="py-16 bg-white overflow-hidden">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-3xl font-bold font-alansans text-teal-900 text-center mb-12">Our Service Process</h2>
-            <div class="flex flex-col md:flex-row items-center justify-center space-y-6 md:space-y-0 md:space-x-2 lg:space-x-4 max-w-full overflow-hidden">
-                <!-- Step 1: Assessment -->
-                <div class="flex flex-col items-center space-y-2 text-center flex-shrink-0">
-                    <div class="w-12 h-12 md:w-16 md:h-16 bg-blue-500 rounded-full flex items-center justify-center text-white text-lg md:text-xl flex-shrink-0">
-                        <i class="fas fa-clipboard-check"></i>
-                    </div>
-                    <span class="text-gray-700 font-medium text-sm md:text-base">Initial Assessment</span>
-                    <p class="text-xs text-gray-600 w-24 md:w-32">Comprehensive system evaluation and analysis</p>
-                </div>
-                <i class="fas fa-arrow-right text-teal-600 text-xl md:text-2xl hidden md:block flex-shrink-0"></i>
-                <div class="flex items-center space-x-2 md:hidden flex-shrink-0">
-                    <i class="fas fa-arrow-down text-teal-600 text-2xl"></i>
-                </div>
+   <section class="relative py-16 bg-white overflow-hidden">
 
-                <!-- Step 2: Planning -->
-                <div class="flex flex-col items-center space-y-2 text-center flex-shrink-0">
-                    <div class="w-12 h-12 md:w-16 md:h-16 bg-green-500 rounded-full flex items-center justify-center text-white text-lg md:text-xl flex-shrink-0">
-                        <i class="fas fa-tasks"></i>
-                    </div>
-                    <span class="text-gray-700 font-medium text-sm md:text-base">Maintenance Planning</span>
-                    <p class="text-xs text-gray-600 w-24 md:w-32">Customized maintenance schedule and protocols</p>
-                </div>
-                <i class="fas fa-arrow-right text-teal-600 text-xl md:text-2xl hidden md:block flex-shrink-0"></i>
-                <div class="flex items-center space-x-2 md:hidden flex-shrink-0">
-                    <i class="fas fa-arrow-down text-teal-600 text-2xl"></i>
-                </div>
+    <!-- ✅ Watermark Logo Background -->
+    <div class="absolute inset-0 flex items-center justify-center opacity-10 pointer-events-none">
+        <img src="Images/logo.png" alt="Terrapure Logo Watermark" class="w-[280px] md:w-[420px] lg:w-[520px] object-contain">
+    </div>
 
-                <!-- Step 3: Implementation -->
-                <div class="flex flex-col items-center space-y-2 text-center flex-shrink-0">
-                    <div class="w-12 h-12 md:w-16 md:h-16 bg-blue-500 rounded-full flex items-center justify-center text-white text-lg md:text-xl flex-shrink-0">
-                        <i class="fas fa-tools"></i>
-                    </div>
-                    <span class="text-gray-700 font-medium text-sm md:text-base">Implementation</span>
-                    <p class="text-xs text-gray-600 w-24 md:w-32">Professional execution of maintenance activities</p>
-                </div>
-                <i class="fas fa-arrow-right text-teal-600 text-xl md:text-2xl hidden md:block flex-shrink-0"></i>
-                <div class="flex items-center space-x-2 md:hidden flex-shrink-0">
-                    <i class="fas fa-arrow-down text-teal-600 text-2xl"></i>
-                </div>
+    <div class="relative z-10 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <h2 class="text-3xl font-bold font-alansans text-teal-900 text-center mb-12">Our Service Process</h2>
 
-                <!-- Step 4: Monitoring -->
-                <div class="flex flex-col items-center space-y-2 text-center flex-shrink-0">
-                    <div class="w-12 h-12 md:w-16 md:h-16 bg-green-500 rounded-full flex items-center justify-center text-white text-lg md:text-xl flex-shrink-0">
-                        <i class="fas fa-chart-line"></i>
-                    </div>
-                    <span class="text-gray-700 font-medium text-sm md:text-base">Performance Monitoring</span>
-                    <p class="text-xs text-gray-600 w-24 md:w-32">Continuous system performance tracking</p>
-                </div>
-                <i class="fas fa-arrow-right text-teal-600 text-xl md:text-2xl hidden md:block flex-shrink-0"></i>
-                <div class="flex items-center space-x-2 md:hidden flex-shrink-0">
-                    <i class="fas fa-arrow-down text-teal-600 text-2xl"></i>
-                </div>
+        <div class="flex flex-col md:flex-row items-center justify-center space-y-6 md:space-y-0 md:space-x-2 lg:space-x-4 max-w-full overflow-hidden">
 
-                <!-- Step 5: Support -->
-                <div class="flex flex-col items-center space-y-2 text-center flex-shrink-0">
-                    <div class="w-12 h-12 md:w-16 md:h-16 bg-blue-500 rounded-full flex items-center justify-center text-white text-lg md:text-xl flex-shrink-0">
-                        <i class="fas fa-headset"></i>
-                    </div>
-                    <span class="text-gray-700 font-medium text-sm md:text-base">Ongoing Support</span>
-                    <p class="text-xs text-gray-600 w-24 md:w-32">24/7 technical support and emergency services</p>
+            <!-- Step 1 -->
+            <div class="flex flex-col items-center space-y-2 text-center flex-shrink-0">
+                <div class="w-12 h-12 md:w-16 md:h-16 bg-blue-500 rounded-full flex items-center justify-center text-white text-lg md:text-xl">
+                    <i class="fas fa-clipboard-check"></i>
                 </div>
+                <span class="text-gray-700 font-medium text-sm md:text-base">Initial Assessment</span>
+                <p class="text-xs text-gray-600 w-24 md:w-32">Comprehensive system evaluation and analysis</p>
             </div>
+
+            <i class="fas fa-arrow-right text-teal-600 text-xl md:text-2xl hidden md:block"></i>
+            <div class="flex items-center space-x-2 md:hidden">
+                <i class="fas fa-arrow-down text-teal-600 text-2xl"></i>
+            </div>
+
+            <!-- Step 2 -->
+            <div class="flex flex-col items-center space-y-2 text-center flex-shrink-0">
+                <div class="w-12 h-12 md:w-16 md:h-16 bg-green-500 rounded-full flex items-center justify-center text-white text-lg md:text-xl">
+                    <i class="fas fa-tasks"></i>
+                </div>
+                <span class="text-gray-700 font-medium text-sm md:text-base">Maintenance Planning</span>
+                <p class="text-xs text-gray-600 w-24 md:w-32">Customized maintenance schedule and protocols</p>
+            </div>
+
+            <i class="fas fa-arrow-right text-teal-600 text-xl md:text-2xl hidden md:block"></i>
+            <div class="flex items-center space-x-2 md:hidden">
+                <i class="fas fa-arrow-down text-teal-600 text-2xl"></i>
+            </div>
+
+            <!-- Step 3 -->
+            <div class="flex flex-col items-center space-y-2 text-center flex-shrink-0">
+                <div class="w-12 h-12 md:w-16 md:h-16 bg-blue-500 rounded-full flex items-center justify-center text-white text-lg md:text-xl">
+                    <i class="fas fa-tools"></i>
+                </div>
+                <span class="text-gray-700 font-medium text-sm md:text-base">Implementation</span>
+                <p class="text-xs text-gray-600 w-24 md:w-32">Professional execution of maintenance activities</p>
+            </div>
+
+            <i class="fas fa-arrow-right text-teal-600 text-xl md:text-2xl hidden md:block"></i>
+            <div class="flex items-center space-x-2 md:hidden">
+                <i class="fas fa-arrow-down text-teal-600 text-2xl"></i>
+            </div>
+
+            <!-- Step 4 -->
+            <div class="flex flex-col items-center space-y-2 text-center flex-shrink-0">
+                <div class="w-12 h-12 md:w-16 md:h-16 bg-green-500 rounded-full flex items-center justify-center text-white text-lg md:text-xl">
+                    <i class="fas fa-chart-line"></i>
+                </div>
+                <span class="text-gray-700 font-medium text-sm md:text-base">Performance Monitoring</span>
+                <p class="text-xs text-gray-600 w-24 md:w-32">Continuous system performance tracking</p>
+            </div>
+
+            <i class="fas fa-arrow-right text-teal-600 text-xl md:text-2xl hidden md:block"></i>
+            <div class="flex items-center space-x-2 md:hidden">
+                <i class="fas fa-arrow-down text-teal-600 text-2xl"></i>
+            </div>
+
+            <!-- Step 5 -->
+            <div class="flex flex-col items-center space-y-2 text-center flex-shrink-0">
+                <div class="w-12 h-12 md:w-16 md:h-16 bg-blue-500 rounded-full flex items-center justify-center text-white text-lg md:text-xl">
+                    <i class="fas fa-headset"></i>
+                </div>
+                <span class="text-gray-700 font-medium text-sm md:text-base">Ongoing Support</span>
+                <p class="text-xs text-gray-600 w-24 md:w-32">24/7 technical support and emergency services</p>
+            </div>
+
         </div>
-    </section>
+    </div>
+
+</section>
+
 
  <!-- Footer -->
     <footer
