--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
           >
             <!-- Watermark -->
             <img
-              src="Images/logo.png"
+              src="Images/Logo.png"
               class="absolute opacity-10 w-40 sm:w-48 md:w-56 lg:w-64 left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 pointer-events-none z-0"
               alt="Terrapure"
             />
@@ -769,7 +769,7 @@
             class="relative bg-white p-6 border rounded-xl hover:shadow-lg transition-all overflow-hidden"
           >
             <img
-              src="Images/logo.png"
+              src="Images/Logo.png"
               class="absolute opacity-10 w-40 sm:w-48 md:w-56 lg:w-64 left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 pointer-events-none z-0"
               alt="Terrapure"
             />
@@ -791,7 +791,7 @@
             class="relative bg-white p-6 border rounded-xl hover:shadow-lg transition-all overflow-hidden"
           >
             <img
-              src="Images/logo.png"
+              src="Images/Logo.png"
               class="absolute opacity-10 w-40 sm:w-48 md:w-56 lg:w-64 left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 pointer-events-none z-0"
               alt="Terrapure"
             />
