created client page and updated in the header of all pages

--- a/sewage.html
+++ b/sewage.html
@@ -356,6 +356,11 @@
                 </div>
               </div>
             </div>
+ <a
+              href="clients.html"
+              class="text-teal-900 hover:text-teal-600 px-3 py-3 text-base font-medium transition-colors"
+              >Clients</a
+            >
 
             <a
               href="career.html"
@@ -473,6 +478,11 @@
               >
             </div>
           </div>
+ <a
+            href="clients.html"
+            class="block text-teal-900 hover:text-teal-600 px-3 py-2 text-base font-medium transition-colors rounded-md hover:bg-teal-50"
+            >Clients</a
+          >
 
           <a
             href="career.html"
