--- a/demineralization-plants(DM).html
+++ b/demineralization-plants(DM).html
@@ -319,6 +319,12 @@
             </div>
 
             <a
+              href="clients.html"
+              class="text-teal-900 hover:text-teal-600 px-3 py-3 text-base font-medium transition-colors"
+              >Clients</a
+            >
+
+            <a
               href="career.html"
               class="text-teal-900 hover:text-teal-600 px-3 py-3 text-base font-medium transition-colors"
               >Career</a
@@ -434,6 +440,11 @@
               >
             </div>
           </div>
+           <a
+            href="clients.html"
+            class="block text-teal-900 hover:text-teal-600 px-3 py-2 text-base font-medium transition-colors rounded-md hover:bg-teal-50"
+            >Clients</a
+          >
 
           <a
             href="career.html"
