--- a/index.html
+++ b/index.html
@@ -418,6 +418,11 @@
               </div>
             </div>
 
+             <a
+              href="clients.html"
+              class="text-teal-900 hover:text-teal-600 px-3 py-3 text-base font-medium transition-colors"
+              >Clients</a
+            >
             <a
               href="career.html"
               class="text-teal-900 hover:text-teal-600 px-3 py-3 text-base font-medium transition-colors"
@@ -535,7 +540,11 @@
               >
             </div>
           </div>
-
+ <a
+            href="clients.html"
+            class="block text-teal-900 hover:text-teal-600 px-3 py-2 text-base font-medium transition-colors rounded-md hover:bg-teal-50"
+            >Clients</a
+          >
           <a
             href="career.html"
             class="block text-teal-900 hover:text-teal-600 px-3 py-2 text-base font-medium transition-colors rounded-md hover:bg-teal-50"
